--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "categorize_elements",
+  "name": "forge-viewer-categorize-elements",
   "version": "1.0.0",
-  "description": "Categorize and color different elements with user defined parameters.",
+  "description": "Application that allows elements to be categorized and colored in the Forge Viewer based on user criteria.",
   "main": "start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Deian Stoitchkov",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": ">=0.21.1",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
